--- a/hub-core/pom.xml
+++ b/hub-core/pom.xml
@@ -37,6 +37,10 @@
       <artifactId>jsr311-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey.contribs</groupId>
+      <artifactId>jersey-atom-abdera</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.atmosphere</groupId>
       <artifactId>atmosphere-jersey</artifactId>
     </dependency>
